[gd_scene load_steps=12 format=3 uid="uid://drnqyiwnpts7k"]

[ext_resource type="Script" path="res://menus/menu.gd" id="1_08rkx"]
[ext_resource type="Texture2D" uid="uid://bf4mwy66ty1vs" path="res://asset/MenuButton/MenuButtonA.png" id="2_fy2w6"]
[ext_resource type="Texture2D" uid="uid://cavuyuis4nf6n" path="res://asset/MenuButton/MenuButtonB.png" id="3_2ool8"]
[ext_resource type="FontFile" uid="uid://pdrka83wc2a3" path="res://asset/dial_button/pixelsix00.ttf" id="4_eglkk"]
[ext_resource type="Texture2D" uid="uid://cbxdfu4pfjx44" path="res://asset/Game Title.png" id="8_xno7n"]
[ext_resource type="AudioStream" uid="uid://c4u46fh70x517" path="res://asset/Soundtrack/MainMenu.mp3" id="9_j7v64"]
[ext_resource type="Texture2D" uid="uid://ccvmjavne58xc" path="res://asset/useable.png" id="10_8k3l8"]
[ext_resource type="PackedScene" uid="uid://div6tgqs38lwg" path="res://Minigames/tutorial_ui.tscn" id="10_35118"]
[ext_resource type="Texture2D" uid="uid://dlnvpx1iw58pf" path="res://asset/Prlx3World.png" id="11_8tysm"]
[ext_resource type="PackedScene" uid="uid://gfx60wb32r42" path="res://menus/Settings.tscn" id="11_itnti"]
[ext_resource type="Texture2D" uid="uid://bjjanpau63g57" path="res://asset/Prlx2World.png" id="12_kai3s"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_08rkx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -329.5
offset_top = -91.0
offset_right = 111.5
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)

[node name="VBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 30

[node name="NewGameB" type="TextureButton" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(178, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture_normal = ExtResource("2_fy2w6")
texture_pressed = ExtResource("3_2ool8")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/NewGameB"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_eglkk")
theme_override_font_sizes/font_size = 25
text = "Game Baru"

[node name="StartB" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture_normal = ExtResource("2_fy2w6")
texture_pressed = ExtResource("3_2ool8")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/StartB"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -14.5
offset_right = 60.0
offset_bottom = 14.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_eglkk")
theme_override_font_sizes/font_size = 25
text = "Lanjutkan"

[node name="VBoxContainer2" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 30

[node name="OptionB" type="TextureButton" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture_normal = ExtResource("2_fy2w6")
texture_pressed = ExtResource("3_2ool8")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/OptionB"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.0
offset_top = -14.5
offset_right = 73.0
offset_bottom = 14.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_eglkk")
theme_override_font_sizes/font_size = 25
text = "Pengaturan"

[node name="QuitB" type="TextureButton" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture_normal = ExtResource("2_fy2w6")
texture_pressed = ExtResource("3_2ool8")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/QuitB"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.5
offset_top = -14.5
offset_right = 39.5
offset_bottom = 14.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_eglkk")
theme_override_font_sizes/font_size = 25
text = "Keluar"

[node name="GameTitle" type="Sprite2D" parent="."]
position = Vector2(586, 101)
texture = ExtResource("8_xno7n")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("9_j7v64")
volume_db = 5.0
autoplay = true
bus = &"Music"

[node name="BG" type="ParallaxBackground" parent="."]
offset = Vector2(0, 52)
transform = Transform2D(1, 0, 0, 1, 0, 52)

[node name="ParallaxLayer" type="ParallaxLayer" parent="BG"]
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(1280, 0)

[node name="Useable" type="Sprite2D" parent="BG/ParallaxLayer"]
position = Vector2(642, 300)
scale = Vector2(2.5, 2.465)
texture = ExtResource("10_8k3l8")

[node name="ParallaxLayerMid2" type="ParallaxLayer" parent="BG"]
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(2876, 0)

[node name="Prlx3World" type="Sprite2D" parent="BG/ParallaxLayerMid2"]
position = Vector2(2000, 315)
texture = ExtResource("11_8tysm")

[node name="ParallaxLayerMid" type="ParallaxLayer" parent="BG"]
motion_scale = Vector2(0.5, 0.5)
motion_mirroring = Vector2(4000, 0)

[node name="Prlx2World" type="Sprite2D" parent="BG/ParallaxLayerMid"]
position = Vector2(2000, 317)
texture = ExtResource("12_kai3s")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="BG"]

[node name="konfirmasi" parent="." instance=ExtResource("10_35118")]
visible = false
position = Vector2(584, 356)
scale = Vector2(0.5, 0.5)

[node name="Label" type="Label" parent="konfirmasi"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -608.0
offset_top = -252.0
offset_right = 607.0
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Peringatan:

Memainkan permainan baru akan 
menghapus permainan anda sebelumnya. 

Apakah kamu yakin?"
horizontal_alignment = 1

[node name="yes" type="Button" parent="konfirmasi"]
offset_left = -325.0
offset_top = 150.0
offset_right = -75.0
offset_bottom = 250.0
theme_override_font_sizes/font_size = 40
text = "YA"

[node name="no" type="Button" parent="konfirmasi"]
offset_left = 100.0
offset_top = 150.0
offset_right = 350.0
offset_bottom = 250.0
theme_override_font_sizes/font_size = 40
text = "TIDAK"

[node name="Settings" parent="." instance=ExtResource("11_itnti")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/NewGameB" to="." method="_on_new_game_b_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/NewGameB" to="." method="_on_new_game_b_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/NewGameB" to="." method="_on_new_game_b_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/StartB" to="." method="_on_start_b_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/StartB" to="." method="_on_start_b_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/StartB" to="." method="_on_start_b_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer2/OptionB" to="." method="_on_option_b_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer2/OptionB" to="." method="_on_option_b_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/OptionB" to="." method="_on_option_b_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer2/QuitB" to="." method="_on_quit_b_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer2/QuitB" to="." method="_on_quit_b_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/QuitB" to="." method="_on_quit_b_pressed"]
[connection signal="pressed" from="konfirmasi/yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="konfirmasi/no" to="." method="_on_no_pressed"]
[connection signal="pressed" from="Settings/MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]

[editable path="Settings"]
